RESOLVED FIXED32094
[V8] Attributes and NamedNodeMaps aren't tracked correctly and may be prematurely garbage-collected.
https://bugs.webkit.org/show_bug.cgi?id=32094
Summary [V8] Attributes and NamedNodeMaps aren't tracked correctly and may be prematu...
Dimitri Glazkov (Google)
Reported 2009-12-02 15:03:30 PST
I started looking at it after researching the QualifiedName crash (http://crbug.com/27068). Turns out, there's a test for that: http://trac.webkit.org/changeset/48769 ... and Chromium was failing it. So fix is coming up.
Attachments
WIP: Improve V8 bindings attribute story (7.64 KB, patch)
2009-12-02 15:12 PST, Dimitri Glazkov (Google)
abarth: review+
Dimitri Glazkov (Google)
Comment 1 2009-12-02 15:12:09 PST
Created attachment 44187 [details] WIP: Improve V8 bindings attribute story
WebKit Review Bot
Comment 3 2009-12-02 21:12:25 PST
style-queue ran check-webkit-style on attachment 44187 [details] without any errors.
Adam Barth
Comment 4 2009-12-02 21:25:05 PST
Comment on attachment 44187 [details] WIP: Improve V8 bindings attribute story Ok. This stuff is pretty subtle, but I'm glad it fixes a LayoutTest!
Dimitri Glazkov (Google)
Comment 5 2009-12-03 08:59:11 PST
Note You need to log in before you can comment on or make changes to this bug.